--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,10 @@
     tools:context=".MainActivity">
 
   <android.support.v7.widget.RecyclerView
+      android:id="@+id/recycler_vista"
       android:layout_width="match_parent"
-      android:layout_height="match_parent">
+      android:layout_height="match_parent"
+      android:background="@color/cardview_dark_background"/>
 
-  </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
