--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/recycler_vista"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:background="@color/cardview_dark_background"/>
+ <LinearLayout
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:orientation="vertical">
+   <android.support.v7.widget.Toolbar
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:elevation="4dp"
+       app:title="Inicio"
+       app:titleTextColor="white"
+       android:background="@color/primaryDarkColor">
+
+   </android.support.v7.widget.Toolbar>
+
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="@string/title"
+       android:textAlignment="center"
+       android:layout_marginBottom="10dp"
+       android:layout_marginTop="10dp"
+       android:textSize="18sp"
+       android:fontFamily="sans-serif-condensed-medium"/>
+
+
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/recycler_vista"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:background="@color/cardview_dark_background"/>
+ </LinearLayout>
 
 
 </RelativeLayout>
